cashback-frontend/src/styles/top_menu.css
.top-menu {
    width: 95%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: rgba(100, 162, 255, 0.836);
    border: 1px solid #bed8ff;
    border-radius: 5px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}

.top-menu__list {
    height: auto;
    width: 170.84;
    display: flex;
    flex-direction: row;
    margin-left: -30px;
    gap: 30px;
}

.top-menu__item {
    text-decoration: none;
    list-style: none;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 18px;
    color: aliceblue;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
    transition: transform 0.2s ease;
    cursor: pointer;
}

.top-menu__item a {
    text-decoration: none;
    color: inherit;
}

.top-menu__item:hover {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.582);
    transform: scale(1.1);
}

@media (min-width: 620px) {
    .top-menu__list {
        gap: 60px;
    }
}

@media (min-width: 1000px) {
    .top-menu {
        width: 35%;
        border-radius: 20px;
    }
}

